<resources>
    <string name="app_name">JP4application</string>
    <string name="first_button">first</string>
    <string translatable="false" name="login">Login</string>
    <string name="register">Sign up</string>
    <string name="hint_email">Insert your email</string>
    <string name="hint_password">Insert your password</string>
    <string name="hint_phone">Insert your phone Number</string>
    <string name="login_error">Login failed</string>
    <string name="login_success">Logged In successfully</string>
    <string name="password_error">La password è errata.</string>
    <string name="email_error">L\'email è errata.</string>
    <string name="welcome">Welcome</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="drink_milk">Milk</string>
    <string name="food_bread">Bread</string>
    <string name="drink_tea">Tea</string>
    <string name="price">2,00€</string>
    <string name="total">totale</string>
    <string name="buy">BUY</string>

</resources>
