<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:layout_width="match_parent"
        android:id="@+id/email_et"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:id="@+id/password_et"
        android:hint="@string/hint_password"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="phone"
        android:hint="@string/hint_phone"
        android:id="@+id/phone_et"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="bottom"
        android:layout_height="match_parent">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:id="@+id/register_btn"
            android:text="@string/register"/>


    </LinearLayout>



</LinearLayout>