<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_et"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_et"
        android:inputType="textPassword"
        android:hint="@string/hint_password"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"

        android:gravity="center_horizontal"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:text="@string/login"
            android:id="@+id/login_btn"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:text="@string/register"
            android:visibility="gone"
            android:id="@+id/register_btn"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>