<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/header">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:id="@+id/welcome_tv"/>
</LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:id="@+id/food_rv">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true" >

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/total"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="match_parent"
            android:onClick="onClick"
            android:enabled="false"
            android:id="@+id/buy"
            android:text="@string/buy"
            android:layout_height="wrap_content" />

    </LinearLayout>

    </RelativeLayout>


